--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,24 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-	<dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
-	</dependencies>
+	<scm>
+		<developerConnection>scm:git:git@github.com:tlgainer/sfg-pet-clinic.git</developerConnection>
+	</scm>
 
 </project>
