--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>sfg-pet-clinic</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -39,6 +39,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:tlgainer/sfg-pet-clinic.git</developerConnection>
+    <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
 </project>
