--- a/pom.xml
+++ b/pom.xml
@@ -20,25 +20,25 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<goals>install</goals>
-					<autoVersionSubmodules>true</autoVersionSubmodules>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-release-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<goals>install</goals>-->
+<!--					<autoVersionSubmodules>true</autoVersionSubmodules>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
 
-	<scm>
-		<developerConnection>scm:git:git@github.com:tlgainer/sfg-pet-clinic.git</developerConnection>
-  </scm>
+<!--	<scm>-->
+<!--		<developerConnection>scm:git:git@github.com:tlgainer/sfg-pet-clinic.git</developerConnection>-->
+<!--  </scm>-->
 
 </project>
